nginx/nginx-ingressroute.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: my-nginx-ingressroute
  namespace: nginx
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`www.icetechnology.com.ve`)
      kind: Rule
      services:
        - name: my-nginx
          port: 80
  tls:
    secretName: my-nginx-certificate-secret
